plugins {
	id 'java-gradle-plugin'
	id 'checkstyle'
}

group = 'com.etk2000'
version = '1.3.0'

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

gradlePlugin {
	plugins {
		checkstyle {
			id = 'com.etk2000.checkstyle'
			implementationClass = 'com.etk2000.checkstyle.gradle.CheckstylePlugin'
		}
	}
}

checkstyle {
	toolVersion = checkstyleVersion
	configFile = file('src/main/resources/com/etk2000/checkstyle/checkstyle.xml')
	configDirectory = file('config/checkstyle')
	configProperties = ['minSdk': String.valueOf(Integer.MAX_VALUE)]
}

processResources {
	filesMatching('**/plugin.properties') {
		expand project.properties
	}
}

dependencies {
	checkstyle files(sourceSets.main.output.classesDirs)
	checkstyle "com.puppycrawl.tools:checkstyle:${checkstyleVersion}"
	checkstyle 'com.google.code.findbugs:jsr305:3.0.2'

	compileOnly "com.puppycrawl.tools:checkstyle:${checkstyleVersion}"
	compileOnly 'org.jetbrains:annotations:26.0.2'
	implementation 'com.google.code.findbugs:jsr305:3.0.2'

	testImplementation "com.puppycrawl.tools:checkstyle:${checkstyleVersion}"
	testImplementation 'junit:junit:4.13.2'
}

tasks.withType(Checkstyle).configureEach {
	dependsOn classes
}

tasks.register('checkstyleTestResources', Checkstyle) {
	source fileTree('src/test/resources')
	include '**/*.java'
	classpath = files()
	configFile = file('config/checkstyle/checkstyle-test-resources.xml')
	configDirectory = file('config/checkstyle')
	configProperties = ['minSdk': String.valueOf(Integer.MAX_VALUE)]
}

tasks.named('check') {
	dependsOn 'checkstyleTestResources'
}